@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.3.4"
+  "version": "3.2.3.5"
 }
