@@ -743,5 +743,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.3.4"
+  "version": "3.2.3.5"
 }
